--- a/03-spring-demo/pom.xml
+++ b/03-spring-demo/pom.xml
@@ -9,10 +9,16 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework</groupId>-->
+        <!--            <artifactId>spring-context</artifactId>-->
+        <!--            <version>5.2.0.RELEASE</version>-->
+        <!--        </dependency>-->
+
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <groupId>com.lfw</groupId>
+            <artifactId>04-custom-spring</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
